8046148: JEP 158: Unified JVM Logging

Reviewed-by: coleenp, sla